--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 ######################## default configuration ####################
 baseURL = "https://www.openinfra.id/"
-title = "OpenStack & OpenInfra Indonesia User Group"
+title = "Openinfra Indonesia User Group"
 theme = "bizcraft-hugo"
 # post pagination
 paginate = "3"
