--- a/data/id/faq.yaml
+++ b/data/id/faq.yaml
@@ -3,18 +3,18 @@ faq:
   - title : "Komunitas & Keanggotaan"
     faq_accordion:
       # faq accordion loop item
-      - name : "Apakah OpenStack & OpenInfra Indonesia memiliki basecamp?"
+      - name : "Apakah Openinfra Indonesia User Group memiliki basecamp?"
         bullet_point:
           - Tidak ada, pengurus kami dari berbagai kota di Indonesia tapi kami biasanya mengadakan regular meetup tiap bulan di kota-kota yang berbeda.
-      - name : "Bagaimana cara menjadi anggota OpenStack & OpenInfra Indonesia?"
+      - name : "Bagaimana cara menjadi anggota Openinfra Indonesia User Group?"
         bullet_point:
           - Bergabung ke https://meetup.com/openinfraid
           - Bergabung ke Telegram group https://t.me/openstackindo
           - Dan diskusi apapun tentang proyek infrastuktur terbuka
-      - name : "Apakah pengurus Openstack & Openinfra Indonesia dibayar?"
+      - name : "Apakah pengurus Openinfra Indonesia User Group dibayar?"
         bullet_point:
-          - Tidak, Openstack & Openinfra Indonesia merupakan komunitas nonprofit dan aktivitas kepengurusan kami bersifat sukarela (volunteer) sehingga tidak ada bayaran untuk pengurusnya.
-      - name : "Bagaimana cara menjadi pengurus OpenStack & OpenInfra Indonesia?"
+          - Tidak, Openinfra Indonesia User Group merupakan komunitas nonprofit dan aktivitas kepengurusan kami bersifat sukarela (volunteer) sehingga tidak ada bayaran untuk pengurusnya.
+      - name : "Bagaimana cara menjadi pengurus Openinfra Indonesia User Group?"
         bullet_point:
           - Silakan ajukan ketertarikan anda ke email volunteers@openinfra.id  
 
